2011-12-12  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* dfp/decimal/decimal(operator<< decimal128): Removed now spurious
	call to ostream_d128() (which has been removed from libdfp) in the
	decimal128 operator<< overload.
	Updated comments clarifying use of 'a/A' over 'g/G' for the default.

2011-12-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* dfp/decimal/decimal: Added back in erroneously removed #include
	<stdio.h>.

2011-12-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* dfp/decimal/decimal: Removed ostreamd32, ostreamd64, and
	ostreamd128 prototypes.

2011-12-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* decode.h: Added __BEGIN_DECLS and __END_DECLS around
	decoded[32|64|128] prototypes in order to allow them to be used in C++
	compatibility testcases without warnings.
	* scaffold.c: Removed extra #include "decode.h". 
	* test-strtod.c: Likewise.

2011-12-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* Makefile.in: Copied contents of $(system_header_dirs) into
	$(header_dirs) in order to have -I added automatically to the compiler
	invocation.  This makes sure that dfp/decimal/decimal always comes
	before the system include/decimal/decimal header.

2011-12-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* README.user: Add instructions for using <decimal/decimal> to pick up
	operator<< and operator>> overloads for decimal[32|64|128] types.
	* README.developer: Removed necessity of including -isystem in
	CPPFLAGS in order to pick up decimal headers.
	* dfp/decimal: Created dfp/decimal/ header include directory.
	* dfp/decimal.tmp: Moved decimal.tmp to decimal/decimal.
	* dfp/decimal/decimal: Moved decimal.tmp to decimal/decimal.

2011-12-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* Makefile.in: Install dfp/decimal/ directory.  Add
	dfp/decimal/decimal path.
	* tests/test-ostream.cpp: Change <decimal> to <decimal/decimal>
	* TODO: Added directive to test decimal/ directory installs.
	* dfp/decimal: Moved file "decimal" to "decimal.tmp".